small gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -164,7 +164,7 @@ button:hover {
 
   #recipes-grid {
     grid-template-columns: 1fr; 
-    gap: 20px;
+    gap: 50px;
     
 
   }
